[Qdon] Fix mention colour is still not visible well in light theme

--- a/app/javascript/styles/qdon-light/diff.scss
+++ b/app/javascript/styles/qdon-light/diff.scss
@@ -1,2 +1,7 @@
 @import '../mastodon-light/diff';
 @import '../qdon/diff';
+
+// Colourise mention
+a.status-link {
+  color: $dark-blue;
+}
