--- a/app/javascript/styles/qdon-light/variables.scss
+++ b/app/javascript/styles/qdon-light/variables.scss
@@ -1,6 +1,6 @@
 // Qdon colors
-$skyblue: hsl(212deg, 100%, 70%);
-$dark-blue: hsl(212deg, 100%, 55%);
+$skyblue: hsl(212deg, 100%, 65%);
+$dark-blue: hsl(212deg, 100%, 50%);
 $pink: hsl(304deg, 100%, 80%);
 $grey: #282c37;
 $text-shadow-color: #888;
